unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/FPC_MCA_OPP_Statement__c.object-meta.xml
<CustomObject>
    <description>Detail file of monthly statements.</description>
    <label>MCA OPP Statement</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>MCA OPP Statement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCA OPP Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>