unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/DEBIT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>DEBIT_AMOUNT__c</fullName>
    <description>Debit card amount</description>
    <inlineHelpText>Type in the amount of debit card sales.</inlineHelpText>
    <label>DEBIT AMOUNT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>