unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/DEBIT_QUANTITY__c.field-meta.xml
<CustomField>
    <fullName>DEBIT_QUANTITY__c</fullName>
    <description>Debit card quantity</description>
    <inlineHelpText>Type in the quantity of debit card sales processed.</inlineHelpText>
    <label>DEBIT QUANTITY</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>