unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/Discover_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discover_Amount__c</fullName>
    <description>Discover Amount</description>
    <label>Discover Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>