unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/MC_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>MC_AMOUNT__c</fullName>
    <description>MC Amount</description>
    <inlineHelpText>Type in the amount of MC card sales.</inlineHelpText>
    <label>MC AMOUNT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>