unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/MC_QUANTITY__c.field-meta.xml
<CustomField>
    <fullName>MC_QUANTITY__c</fullName>
    <description>MC quantity</description>
    <inlineHelpText>Type in the quantity of MC sales processed.</inlineHelpText>
    <label>MC QUANTITY</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>