unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MCA OPP Statement</relationshipLabel>
    <relationshipName>MCA_OPP_Statement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>