unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/OTHER_1_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>OTHER_1_AMOUNT__c</fullName>
    <description>Amount of other cards - 1</description>
    <inlineHelpText>Type in the amount of other credit cards sales.</inlineHelpText>
    <label>OTHER 1 AMOUNT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>