unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/OTHER_1_QUANTITY__c.field-meta.xml
<CustomField>
    <fullName>OTHER_1_QUANTITY__c</fullName>
    <description>Quantity of other cards - 1</description>
    <inlineHelpText>Type in the quantity of other types of credit card sales processed.</inlineHelpText>
    <label>OTHER 1 QUANTITY</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>