unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/Other_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Type_2__c</fullName>
    <label>Other_Type_2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>EBT</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Care Credit</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>