unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/STATEMENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>STATEMENT_DATE__c</fullName>
    <description>Date that the statement was received.</description>
    <inlineHelpText>Type in the date that the statement was received in association with the opportunity.</inlineHelpText>
    <label>STATEMENT DATE</label>
    <length>16</length>
    <type>Text</type>
</CustomField>