unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/T_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>T_AMOUNT__c</fullName>
    <formula>Discover_Amount__c + MC_AMOUNT__c + OTHER_1_AMOUNT__c + OTHER_2_AMOUNT__c + VISA_AMOUNT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T_AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>