unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/TOTAL_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_AMOUNT__c</fullName>
    <description>Total Amount of credit card sales.</description>
    <inlineHelpText>Type in the amount of all credit card sales.</inlineHelpText>
    <label>TOTAL AMOUNT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>