unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/VISA_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>VISA_AMOUNT__c</fullName>
    <description>Visa Amount</description>
    <inlineHelpText>Type in the amount of Visa card sales.</inlineHelpText>
    <label>VISA AMOUNT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>