unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/Visa_MC_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Visa_MC_Debit_Amount__c</fullName>
    <description>Total Amount of Visa + MC + Debit</description>
    <formula>DEBIT_AMOUNT__c + VISA_AMOUNT__c + MC_AMOUNT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of Visa + MC + Debit</inlineHelpText>
    <label>Visa / MC / Debit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>