unpackaged/main/default/objects/FPC_MCA_OPP_Statement__c/fields/VISA_QUANTITY__c.field-meta.xml
<CustomField>
    <fullName>VISA_QUANTITY__c</fullName>
    <description>Visa quantity</description>
    <inlineHelpText>Type in the quantity of Visa card sales processed.</inlineHelpText>
    <label>VISA QUANTITY</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>